cfn_templates/JVSANTOSTier1VPCAwsArchitectureStack.template.json
{
  "Resources": {
    "Tier1VPC4AEDEE1E": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/Resource"
      }
    },
    "Tier1VPCPublicSubnet1SubnetFD94A3A6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/Subnet"
      }
    },
    "Tier1VPCPublicSubnet1RouteTable8A1B709D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/RouteTable"
      }
    },
    "Tier1VPCPublicSubnet1RouteTableAssociationADB8074F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet1RouteTable8A1B709D"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet1SubnetFD94A3A6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/RouteTableAssociation"
      }
    },
    "Tier1VPCPublicSubnet1DefaultRoute5F33391D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet1RouteTable8A1B709D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Tier1VPCIGWA077454B"
        }
      },
      "DependsOn": [
        "Tier1VPCVPCGWD21FFDEB"
      ],
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/DefaultRoute"
      }
    },
    "Tier1VPCPublicSubnet1EIP90D5A6FE": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/EIP"
      }
    },
    "Tier1VPCPublicSubnet1NATGateway9C5B2EFF": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "Tier1VPCPublicSubnet1EIP90D5A6FE",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet1SubnetFD94A3A6"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet1/NATGateway"
      }
    },
    "Tier1VPCPublicSubnet2Subnet972CA01A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.16.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2/Subnet"
      }
    },
    "Tier1VPCPublicSubnet2RouteTable8495561D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2/RouteTable"
      }
    },
    "Tier1VPCPublicSubnet2RouteTableAssociation6C86C3D1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet2RouteTable8495561D"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet2Subnet972CA01A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2/RouteTableAssociation"
      }
    },
    "Tier1VPCPublicSubnet2DefaultRouteD3DE9C66": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet2RouteTable8495561D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Tier1VPCIGWA077454B"
        }
      },
      "DependsOn": [
        "Tier1VPCVPCGWD21FFDEB"
      ],
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet2/DefaultRoute"
      }
    },
    "Tier1VPCPublicSubnet3SubnetF783E890": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3/Subnet"
      }
    },
    "Tier1VPCPublicSubnet3RouteTable92152494": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3/RouteTable"
      }
    },
    "Tier1VPCPublicSubnet3RouteTableAssociation4FBA0F64": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet3RouteTable92152494"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet3SubnetF783E890"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3/RouteTableAssociation"
      }
    },
    "Tier1VPCPublicSubnet3DefaultRouteF2D40F5D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPublicSubnet3RouteTable92152494"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Tier1VPCIGWA077454B"
        }
      },
      "DependsOn": [
        "Tier1VPCVPCGWD21FFDEB"
      ],
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PublicSubnet3/DefaultRoute"
      }
    },
    "Tier1VPCIsolatedSubnet1Subnet7F144BE8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.48.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet1/Subnet"
      }
    },
    "Tier1VPCIsolatedSubnet1RouteTableB822BB3A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet1/RouteTable"
      }
    },
    "Tier1VPCIsolatedSubnet1RouteTableAssociationB11C2A11": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCIsolatedSubnet1RouteTableB822BB3A"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet1Subnet7F144BE8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet1/RouteTableAssociation"
      }
    },
    "Tier1VPCIsolatedSubnet2SubnetD1D87E09": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet2/Subnet"
      }
    },
    "Tier1VPCIsolatedSubnet2RouteTableCC1C4C96": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet2/RouteTable"
      }
    },
    "Tier1VPCIsolatedSubnet2RouteTableAssociation1EA22BFB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCIsolatedSubnet2RouteTableCC1C4C96"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet2SubnetD1D87E09"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet2/RouteTableAssociation"
      }
    },
    "Tier1VPCIsolatedSubnet3Subnet633096C1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.80.0/20",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet3/Subnet"
      }
    },
    "Tier1VPCIsolatedSubnet3RouteTable583F613A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet3/RouteTable"
      }
    },
    "Tier1VPCIsolatedSubnet3RouteTableAssociation8ACA377F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCIsolatedSubnet3RouteTable583F613A"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet3Subnet633096C1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IsolatedSubnet3/RouteTableAssociation"
      }
    },
    "Tier1VPCPrivateSubnet1SubnetDB2077AF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.96.0/19",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1/Subnet"
      }
    },
    "Tier1VPCPrivateSubnet1RouteTableF3887E69": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1/RouteTable"
      }
    },
    "Tier1VPCPrivateSubnet1RouteTableAssociation08AF2484": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet1RouteTableF3887E69"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet1SubnetDB2077AF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "Tier1VPCPrivateSubnet1DefaultRoute1A50A878": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet1RouteTableF3887E69"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "Tier1VPCPublicSubnet1NATGateway9C5B2EFF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet1/DefaultRoute"
      }
    },
    "Tier1VPCPrivateSubnet2Subnet761294B6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/19",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2/Subnet"
      }
    },
    "Tier1VPCPrivateSubnet2RouteTable13A838BE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2/RouteTable"
      }
    },
    "Tier1VPCPrivateSubnet2RouteTableAssociation38FF19F3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet2RouteTable13A838BE"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet2Subnet761294B6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "Tier1VPCPrivateSubnet2DefaultRouteBA85E35F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet2RouteTable13A838BE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "Tier1VPCPublicSubnet1NATGateway9C5B2EFF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet2/DefaultRoute"
      }
    },
    "Tier1VPCPrivateSubnet3SubnetE32EBA39": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.160.0/19",
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3/Subnet"
      }
    },
    "Tier1VPCPrivateSubnet3RouteTable90A98EEB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3/RouteTable"
      }
    },
    "Tier1VPCPrivateSubnet3RouteTableAssociation8F6BC3DA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet3RouteTable90A98EEB"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet3SubnetE32EBA39"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3/RouteTableAssociation"
      }
    },
    "Tier1VPCPrivateSubnet3DefaultRoute5F41337B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Tier1VPCPrivateSubnet3RouteTable90A98EEB"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "Tier1VPCPublicSubnet1NATGateway9C5B2EFF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/PrivateSubnet3/DefaultRoute"
      }
    },
    "Tier1VPCIGWA077454B": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/IGW"
      }
    },
    "Tier1VPCVPCGWD21FFDEB": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "InternetGatewayId": {
          "Ref": "Tier1VPCIGWA077454B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1VPC/VPCGW"
      }
    },
    "publicnetworkacl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "Tier_1_ACL_Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_network_acl"
      }
    },
    "publicnaclhttpportinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 200,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 80,
          "To": 80
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_http_port_inbound"
      }
    },
    "publicnaclhttpsportinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 210,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 443,
          "To": 443
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_https_port_inbound"
      }
    },
    "publicnaclsshportinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "DENY",
        "RuleNumber": 220,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 22,
          "To": 22
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_ssh_port_inbound"
      }
    },
    "publicnaclephemeralportinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 230,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_ephemeral_port_inbound"
      }
    },
    "publicnaclhttpportoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 200,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 80,
          "To": 80
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_http_port_outbound"
      }
    },
    "publicnaclhttpsportoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 210,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 443,
          "To": 443
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_https_port_outbound"
      }
    },
    "publicnaclephemeralportoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 220,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_ephemeral_port_outbound"
      }
    },
    "publicnaclsshportoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 230,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 22,
          "To": 22
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_ssh_port_outbound"
      }
    },
    "publicnaclsubnetassoc0": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet1SubnetFD94A3A6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_subnet_assoc_0"
      }
    },
    "publicnaclsubnetassoc1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet2Subnet972CA01A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_subnet_assoc_1"
      }
    },
    "publicnaclsubnetassoc2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "publicnetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPublicSubnet3SubnetF783E890"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/public_nacl_subnet_assoc_2"
      }
    },
    "privatenetworkacl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "Tier_1_ACL_Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_network_acl"
      }
    },
    "privatenaclallportinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 200,
        "CidrBlock": {
          "Fn::GetAtt": [
            "Tier1VPC4AEDEE1E",
            "CidrBlock"
          ]
        },
        "Egress": false,
        "PortRange": {
          "From": 0,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_all_port_inbound"
      }
    },
    "privatenaclallportoutsideinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 210,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_all_port_outside_inbound"
      }
    },
    "privatenaclhttpsportoutsideinbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 220,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 443,
          "To": 443
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_https_port_outside_inbound"
      }
    },
    "privatenaclallportoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 200,
        "CidrBlock": {
          "Fn::GetAtt": [
            "Tier1VPC4AEDEE1E",
            "CidrBlock"
          ]
        },
        "Egress": true,
        "PortRange": {
          "From": 0,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_all_port_outbound"
      }
    },
    "privatenaclallportoutsideoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": -1,
        "RuleAction": "ALLOW",
        "RuleNumber": 210,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 0,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_all_port_outside_outbound"
      }
    },
    "privatenaclhttpsportoutsideoutbound": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 220,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 443,
          "To": 443
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_https_port_outside_outbound"
      }
    },
    "privatenaclsubnetassoc0": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet1SubnetDB2077AF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_subnet_assoc_0"
      }
    },
    "privatenaclsubnetassoc1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet2Subnet761294B6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_subnet_assoc_1"
      }
    },
    "privatenaclsubnetassoc2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "privatenetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCPrivateSubnet3SubnetE32EBA39"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/private_nacl_subnet_assoc_2"
      }
    },
    "isolatednetworkacl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "Tier_1_ACL_Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_network_acl"
      }
    },
    "isolatednaclrdsportinbound1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 100,
        "CidrBlock": "10.0.96.0/19",
        "Egress": false,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_inbound_1"
      }
    },
    "isolatednaclrdsportoutbound1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 100,
        "CidrBlock": "10.0.96.0/19",
        "Egress": true,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_outbound_1"
      }
    },
    "isolatednaclephemeralportoutbound1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 110,
        "CidrBlock": "10.0.96.0/19",
        "Egress": true,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_ephemeral_port_outbound_1"
      }
    },
    "isolatednaclrdsportinbound2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 110,
        "CidrBlock": "10.0.128.0/19",
        "Egress": false,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_inbound_2"
      }
    },
    "isolatednaclrdsportoutbound2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 120,
        "CidrBlock": "10.0.128.0/19",
        "Egress": true,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_outbound_2"
      }
    },
    "isolatednaclephemeralportoutbound2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 130,
        "CidrBlock": "10.0.128.0/19",
        "Egress": true,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_ephemeral_port_outbound_2"
      }
    },
    "isolatednaclrdsportinbound3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 120,
        "CidrBlock": "10.0.160.0/19",
        "Egress": false,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_inbound_3"
      }
    },
    "isolatednaclrdsportoutbound3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 140,
        "CidrBlock": "10.0.160.0/19",
        "Egress": true,
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_rds_port_outbound_3"
      }
    },
    "isolatednaclephemeralportoutbound3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "Protocol": 6,
        "RuleAction": "ALLOW",
        "RuleNumber": 150,
        "CidrBlock": "10.0.160.0/19",
        "Egress": true,
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_ephemeral_port_outbound_3"
      }
    },
    "isolatednaclsubnetassoc0": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet1Subnet7F144BE8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_subnet_assoc_0"
      }
    },
    "isolatednaclsubnetassoc1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet2SubnetD1D87E09"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_subnet_assoc_1"
      }
    },
    "isolatednaclsubnetassoc2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "isolatednetworkacl"
        },
        "SubnetId": {
          "Ref": "Tier1VPCIsolatedSubnet3Subnet633096C1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/isolated_nacl_subnet_assoc_2"
      }
    },
    "CodeStarConnection": {
      "Type": "AWS::CodeStarConnections::Connection",
      "Properties": {
        "ConnectionName": "jvsantos",
        "ProviderType": "GitHub",
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/CodeStarConnection"
      }
    },
    "BeanstalkApplicationLoadBalancerSGF15D451C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Application Load Balancer Security Group",
        "GroupName": "BeanstalkApplicationLoadBalancerSG",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow HTTPS from outside",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "BeanstalkApplicationLoadBalancerSG"
          }
        ],
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/BeanstalkApplicationLoadBalancerSG/Resource"
      }
    },
    "BeanstalkApplicationSG52223C1F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Beanstalk Application Security Group",
        "GroupName": "BeanstalkApplicationSG",
        "SecurityGroupEgress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "Tier1VPC4AEDEE1E",
                "CidrBlock"
              ]
            },
            "Description": "Outbound Rule for VPC",
            "FromPort": 1024,
            "IpProtocol": "tcp",
            "ToPort": 65535
          }
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "BeanstalkApplicationSG"
          }
        ],
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/BeanstalkApplicationSG/Resource"
      }
    },
    "BeanstalkApplicationSGfromJVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationLoadBalancerSG1A08D367443342F8019": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Allow HTTPS from load balancer",
        "FromPort": 443,
        "GroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationSG52223C1F",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationLoadBalancerSGF15D451C",
            "GroupId"
          ]
        },
        "ToPort": 443
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/BeanstalkApplicationSG/from JVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationLoadBalancerSG1A08D367:443"
      }
    },
    "BeanstalkApplicationSGfromJVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationLoadBalancerSG1A08D367808DB06100": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Allow HTTP from load balancer",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationSG52223C1F",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationLoadBalancerSGF15D451C",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/BeanstalkApplicationSG/from JVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationLoadBalancerSG1A08D367:80"
      }
    },
    "RDSSGDCA0486D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "RDS MySQL Security Group",
        "GroupName": "RDSSG",
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          },
          {
            "Key": "Name",
            "Value": "RDSSG"
          }
        ],
        "VpcId": {
          "Ref": "Tier1VPC4AEDEE1E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/RDSSG/Resource"
      }
    },
    "RDSSGfromJVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationSGC17C523C330659A5945F": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Allow MySQL from app",
        "FromPort": 3306,
        "GroupId": {
          "Fn::GetAtt": [
            "RDSSGDCA0486D",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationSG52223C1F",
            "GroupId"
          ]
        },
        "ToPort": 3306
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/RDSSG/from JVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationSGC17C523C:3306"
      }
    },
    "RDSSGtoJVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationSGC17C523C10246553586E08D5F": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "RDSSGDCA0486D",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Outbound Rule for VPC",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "BeanstalkApplicationSG52223C1F",
            "GroupId"
          ]
        },
        "FromPort": 1024,
        "ToPort": 65535
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/RDSSG/to JVSANTOSTier1VPCAwsArchitectureStackBeanstalkApplicationSGC17C523C:1024-65535"
      }
    },
    "Tier1RDSSecret6A92FA05": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"tier1user\"}"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1RDSSecret/Resource"
      }
    },
    "Tier1RDSSecretAttachmentBD2CF0F8": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "Tier1RDSSecret6A92FA05"
        },
        "TargetId": {
          "Ref": "Tier1RDSBD7F7FC8"
        },
        "TargetType": "AWS::RDS::DBInstance"
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1RDSSecret/Attachment/Resource"
      }
    },
    "Tier1RDSSubnetGroup963C1E19": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for Tier1RDS database",
        "SubnetIds": [
          {
            "Ref": "Tier1VPCIsolatedSubnet1Subnet7F144BE8"
          },
          {
            "Ref": "Tier1VPCIsolatedSubnet2SubnetD1D87E09"
          },
          {
            "Ref": "Tier1VPCIsolatedSubnet3Subnet633096C1"
          }
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1RDS/SubnetGroup/Default"
      }
    },
    "Tier1RDSBD7F7FC8": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t3.small",
        "AllocatedStorage": "100",
        "CopyTagsToSnapshot": true,
        "DBInstanceIdentifier": "jvsantostier1rds",
        "DBName": "tier1",
        "DBSubnetGroupName": {
          "Ref": "Tier1RDSSubnetGroup963C1E19"
        },
        "DeletionProtection": false,
        "Engine": "mysql",
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "Tier1RDSSecret6A92FA05"
              },
              ":SecretString:username::}}"
            ]
          ]
        },
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "Tier1RDSSecret6A92FA05"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "MultiAZ": true,
        "PubliclyAccessible": false,
        "StorageType": "gp2",
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          }
        ],
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "RDSSGDCA0486D",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1RDS/Resource"
      }
    },
    "Tier1ACMCertificate95EAA15B": {
      "Type": "AWS::CertificateManager::Certificate",
      "Properties": {
        "DomainName": "jvsantos-tier1.apperdevops.com",
        "DomainValidationOptions": [
          {
            "DomainName": "jvsantos-tier1.apperdevops.com",
            "HostedZoneId": "Z04135332RXQPQVNH7G61"
          }
        ],
        "SubjectAlternativeNames": [
          "*.jvsantos-tier1.apperdevops.com"
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": "JVSANTOSTier1"
          }
        ],
        "ValidationMethod": "DNS"
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/Tier1ACMCertificate/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAACn1RwW7CMAz9Fu4hiG0HdhsrFeoFVYC4p8ZABiTIcYaqqv++tF0JiGkn+z2/vDwnY/n+JseDD3V1Q9geRxVYQlmtWMFRLNFZT4AiscYxeWCR7EzP1qI5VCG8yGpzgWa0yROR++KkYeULg608dkvrGdeqOGHkIzd1zoJWrK25iZsmzfKmLBTPFeNVlSIn/R3aaJwZRgp9L+iS/KIph10OZzStdIF8tXScwukRpYapjLHi4D7WCsGT5nJO1l9a8b9EZvaEzj3xaUvXAuwWHSsCawxCc4OTQZvcoKCtk9VMsSqUw+BBYd8eZuFLlAmf0yW+RZh9PhG9tBau9XBnZdQeSVZdtMa2K2tFe+THJ/t7EuIjsd5pCM8c/SLXHL2DdV2LvOSDNaNXOZGTwZfTekjesD6jXHb1B3AINZuOAgAA"
      },
      "Metadata": {
        "aws:cdk:path": "JVSANTOSTier1VPCAwsArchitectureStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefTier1VPC4AEDEE1E826FF0C2": {
      "Value": {
        "Ref": "Tier1VPC4AEDEE1E"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPC4AEDEE1E826FF0C2"
      }
    },
    "ExportsOutputRefTier1VPCPrivateSubnet1SubnetDB2077AF56606861": {
      "Value": {
        "Ref": "Tier1VPCPrivateSubnet1SubnetDB2077AF"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPrivateSubnet1SubnetDB2077AF56606861"
      }
    },
    "ExportsOutputRefTier1VPCPrivateSubnet2Subnet761294B6BB18A85F": {
      "Value": {
        "Ref": "Tier1VPCPrivateSubnet2Subnet761294B6"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPrivateSubnet2Subnet761294B6BB18A85F"
      }
    },
    "ExportsOutputRefTier1VPCPrivateSubnet3SubnetE32EBA39DED86AAB": {
      "Value": {
        "Ref": "Tier1VPCPrivateSubnet3SubnetE32EBA39"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPrivateSubnet3SubnetE32EBA39DED86AAB"
      }
    },
    "ExportsOutputRefTier1VPCPublicSubnet1SubnetFD94A3A661F79D3A": {
      "Value": {
        "Ref": "Tier1VPCPublicSubnet1SubnetFD94A3A6"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPublicSubnet1SubnetFD94A3A661F79D3A"
      }
    },
    "ExportsOutputRefTier1VPCPublicSubnet2Subnet972CA01AF714AC0E": {
      "Value": {
        "Ref": "Tier1VPCPublicSubnet2Subnet972CA01A"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPublicSubnet2Subnet972CA01AF714AC0E"
      }
    },
    "ExportsOutputRefTier1VPCPublicSubnet3SubnetF783E89056321B68": {
      "Value": {
        "Ref": "Tier1VPCPublicSubnet3SubnetF783E890"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCPublicSubnet3SubnetF783E89056321B68"
      }
    },
    "ExportsOutputRefTier1VPCIsolatedSubnet1Subnet7F144BE8A93EDDAE": {
      "Value": {
        "Ref": "Tier1VPCIsolatedSubnet1Subnet7F144BE8"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCIsolatedSubnet1Subnet7F144BE8A93EDDAE"
      }
    },
    "ExportsOutputRefTier1VPCIsolatedSubnet2SubnetD1D87E0926C244FD": {
      "Value": {
        "Ref": "Tier1VPCIsolatedSubnet2SubnetD1D87E09"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCIsolatedSubnet2SubnetD1D87E0926C244FD"
      }
    },
    "ExportsOutputRefTier1VPCIsolatedSubnet3Subnet633096C15F2A7CFF": {
      "Value": {
        "Ref": "Tier1VPCIsolatedSubnet3Subnet633096C1"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1VPCIsolatedSubnet3Subnet633096C15F2A7CFF"
      }
    },
    "ExportsOutputFnGetAttBeanstalkApplicationSG52223C1FGroupId191ECD2C": {
      "Value": {
        "Fn::GetAtt": [
          "BeanstalkApplicationSG52223C1F",
          "GroupId"
        ]
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputFnGetAttBeanstalkApplicationSG52223C1FGroupId191ECD2C"
      }
    },
    "ExportsOutputFnGetAttBeanstalkApplicationLoadBalancerSGF15D451CGroupIdAC8ED97D": {
      "Value": {
        "Fn::GetAtt": [
          "BeanstalkApplicationLoadBalancerSGF15D451C",
          "GroupId"
        ]
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputFnGetAttBeanstalkApplicationLoadBalancerSGF15D451CGroupIdAC8ED97D"
      }
    },
    "ExportsOutputRefTier1ACMCertificate95EAA15BF9B6C393": {
      "Value": {
        "Ref": "Tier1ACMCertificate95EAA15B"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1ACMCertificate95EAA15BF9B6C393"
      }
    },
    "ExportsOutputRefTier1RDSSecret6A92FA055BE7C916": {
      "Value": {
        "Ref": "Tier1RDSSecret6A92FA05"
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputRefTier1RDSSecret6A92FA055BE7C916"
      }
    },
    "ExportsOutputFnGetAttCodeStarConnectionConnectionArnAF592991": {
      "Value": {
        "Fn::GetAtt": [
          "CodeStarConnection",
          "ConnectionArn"
        ]
      },
      "Export": {
        "Name": "JVSANTOSTier1VPCAwsArchitectureStack:ExportsOutputFnGetAttCodeStarConnectionConnectionArnAF592991"
      }
    }
  }
}
